FIX: styling issue on small mobile screens

--- a/src/pages/QuizSelection.scss
+++ b/src/pages/QuizSelection.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    row-gap: 4rem;
+    row-gap: 3rem;
 
     .welcome-message {
         align-items: center;
@@ -29,7 +29,7 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        row-gap: 2rem;
+        row-gap: 1rem;
 
         .quiz-selection-section {
             width: 100%;
